--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -51,6 +51,8 @@ h3 {
   -webkit-tap-highlight-color: transparent;
   user-select: none;
   -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
 }
 
 @include responsive(large-mobile) {
