--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -11,8 +11,9 @@
 
   &__icon {
     // Responsive icon size with clamp
-    width: clamp(1.8rem, 1vw + 1rem, 2rem);
-    height: clamp(1.8rem, 1vw + 1rem, 2rem);
+    width: 2.4rem;
+    height: 2.4rem;
+    transform: scale(0.8);
   }
 
   &__text {
