--- a/styles/style.css
+++ b/styles/style.css
@@ -273,6 +273,8 @@ h3 {
   -webkit-tap-highlight-color: transparent;
   user-select: none;
   -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
 }
 
 @media screen and (max-width: 30em) {
@@ -313,24 +315,9 @@ h2.heading-secondary {
   letter-spacing: 0.2rem;
 }
 
-.neon-grey:hover {
+.neon:hover {
   color: var(--color-text-bold);
-  text-shadow: 0 0 1rem var(--color-grey), 0 0 2rem var(--color-grey), 0 0 3rem var(--color-grey), 0 0 4rem var(--color-grey);
-}
-
-.neon-purple:hover {
-  color: var(--color-text-bold);
-  text-shadow: 0 0 1rem #9a33ff, 0 0 2rem #9a33ff, 0 0 3rem #9a33ff, 0 0 4rem #9a33ff;
-}
-
-.neon-orange:hover {
-  color: var(--color-text-bold);
-  text-shadow: 0 0 1rem #ff8660, 0 0 2rem #ff8660, 0 0 3rem #ff8660, 0 0 4rem #ff8660;
-}
-
-.neon-blue:hover {
-  color: var(--color-text-bold);
-  text-shadow: 0 0 1rem #5badff, 0 0 2rem #5badff, 0 0 3rem #5badff, 0 0 4rem #5badff;
+  text-shadow: 0 0 1rem var(--color-grey), 0 0 2rem #9a33ff, 0 0 3rem #ff8660, 0 0 4rem #5badff;
 }
 
 .jelly {
@@ -585,6 +572,7 @@ h2.heading-secondary {
 @media screen and (max-width: 30em) {
   .experience__time {
     grid-column: 1/-1;
+    user-select: none;
   }
 }
 @media screen and (max-width: 20em) {
@@ -770,8 +758,9 @@ h2.heading-secondary {
   font-size: var(--font-footer-text);
 }
 .footer__icon {
-  width: clamp(1.8rem, 1vw + 1rem, 2rem);
-  height: clamp(1.8rem, 1vw + 1rem, 2rem);
+  width: 2.4rem;
+  height: 2.4rem;
+  transform: scale(0.8);
 }
 .footer__text {
   font-weight: 300;
